crates/core/src/commands/snapshots/rustic_core__commands__forget__tests__keep-within-quarter-yearly1year 2months 3days 3h.snap
---
source: crates/core/src/commands/forget.rs
expression: result
---
[
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: true,
    reasons: [
      "within quarter-yearly",
    ],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: true,
    reasons: [
      "within quarter-yearly",
    ],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: true,
    reasons: [
      "within quarter-yearly",
    ],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: true,
    reasons: [
      "within quarter-yearly",
    ],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
]
